--- a/style.css
+++ b/style.css
@@ -143,7 +143,12 @@ nav ul li a:hover::after{
 
 .tab-contents ul li span{
     color: #b54769;
-    font-size: 14px;
+    font-size: 18px;
+}
+
+.tab-contents ul li a{
+    text-decoration: none;
+    color: #ababab;
 }
 
 .tab-contents{
@@ -198,7 +203,7 @@ nav ul li a:hover::after{
     background: #ff004f;
     transform: translateY(-10px);
 }
-/* ---------------- About ------------------- */
+/* ---------------- Portfolio ------------------- */
 
 #portfolio{
     padding: 50px 0;
@@ -299,7 +304,7 @@ nav ul li a:hover::after{
 }
 
 .contact-left p i{
-    color:#ff004f;
+    /* color:#ff004f; */
     margin-right: 15px;
     font-size: 25px;
 }
