--- a/style.css
+++ b/style.css
@@ -209,12 +209,20 @@ nav ul li a:hover::after{
     padding: 50px 0;
 }
 
-.work-list{
+/* .work-list{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
+} */
+
+.work-list{
+    display: grid;
+    grid-template-columns: repeat(3, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
 }
+
 
 .work{
     border-radius: 10px;
